--- a/Prb.BMICalculator.WPF/MainWindow.xaml
+++ b/Prb.BMICalculator.WPF/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Methoden4.BMICalculator.WPF.MainWindow"
+﻿<Window x:Class="Prb.BMICalculator.WPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
